Translation fix for Form

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ExtendedCase/EditForm.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ExtendedCase/EditForm.cshtml
@@ -48,7 +48,7 @@
                         <thead>
                             <tr>
                                 <th>
-                                    Form editor
+                                    @Translation.GetCoreTextTranslation("Formulär") editor
                                 </th>
                             </tr>
                         </thead>
